# stxloggerutil

./: .gitignore  README.md  setup.cfg  setup.py
src/stxloggerutil/: decorators.py  log_admin.py  log_message.py
tests/: test_decorators.py
