[metadata]
name = sxtloggerutil
version = 0.0.3
author = Carlos A. Martínez Jiménez
author_email = carloxdev@gmail.com
description = Library for a fast logger implementation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/carloxdev/stxloggerutil
project_urls =
    Bug Tracker = https://github.com/carloxdev/stxloggerutil/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src